# channels-extensions

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  ruff_defaults.toml
.github/workflows/: release.yml  tests.yml
src/channels_extensions/: layers.py  opentelemetry.py  sites.py
testproj/: settings.py
tests/: test_layers.py  test_sites.py
