[project]
name = "channels-extensions"
description = "Some extensions for Django Channels."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
  { name = "Christian Hartung", email = "6785871+hartungstenio@users.noreply.github.com" },
]
keywords = ["django"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "asgiref",
  "asyncio-extensions",
  "channels",
  "django>=5.2",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/hartungstenio/channels-extensions#readme"
Issues = "https://github.com/hartungstenio/channels-extensions/issues"
Source = "https://github.com/hartungstenio/channels-extensions"

[dependency-groups]
dev = [
  "coverage[toml]>=6.5",
  "django-stubs>=5.2",
  "faker",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-django",
  "types-channels",
]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source_pkgs = ["channels_extensions", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
channels_extensions = [
  "src/channels_extensions",
  "*/channels-extensions/src/channels_extensions"
]
tests = ["tests", "*/channels-extensions/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.deptry]
known_first_party = ["channels_extensions"]

[tool.django-stubs]
django_settings_module = "testproj.settings"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.hatch.build.targets.sdist]
exclude = ["/.devcontainer", "/.github"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependency-groups = ["dev"]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "faker",
  "pytest-asyncio",
  "pytest-django",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11", "3.12", "3.13", "3.14"]

[[tool.hatch.envs.hatch-test.matrix]]
django = ["5.2"]
python = ["3.11", "3.12", "3.13", "3.14"]

[[tool.hatch.envs.hatch-test.matrix]]
django = ["6.0"]
python = ["3.12", "3.13", "3.14"]

[tool.hatch.envs.hatch-test.overrides]
matrix.django.dependencies = [
  { value = "django>=5.2,<6.0", if = ["5.2"] },
  { value = "django>=6.0,<6.1", if = ["6.0"] },
]

[tool.hatch.envs.hatch-static-analysis]
skip-install = false
config-path = "ruff_defaults.toml"
dependencies = ["ruff==0.14.7"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "channels_extensions.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[tool.pytest]
pythonpath = [".", "src"]
DJANGO_SETTINGS_MODULE = "testproj.settings"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
extend = "ruff_defaults.toml"

[tool.ruff.lint]
extend-select = ["DJ"]

[tool.ruff.lint.extend-per-file-ignores]
"*/migrations/*" = ["RUF012"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"asyncio.TaskGroup".msg = "Use asyncio_extensions.TaskGroup instead."
